# my-shared

./: .gitmodules
config/icns/: readme.md
config/icns/+/: 14558b5d9f6f5d58edf8205ba9dbaa67_Windows_11_Folder__Blue_.icns
config/icns/ICNS/: Black.icns  Blue.icns  Gray.icns  Green.icns  Orange.icns  Purple.icns  Red.icns  Yellow.icns
config/icns/PSD/: 1024x1024.psd  128x128.psd  16x16.psd  256x256.psd  32x32.psd  512x512.psd  64x64.psd
config/workflow/: README.md
organisation/: current.md  learning≣.md  organisation🏳️.md  repositories📍.md
study/study-syllabus/by-categories/cryptography/: README.md
study/study-syllabus/by-categories/frontend/creative/shaders/: README.md
study/study-syllabus/directed/harvard/harvard-cs-classics/: README.md  cs191.html  index.html  master.html
study/study-syllabus/directed/harvard/harvard-cs-classics/data/: data.json
study/study-syllabus/directed/harvard/harvard-cs-classics/static/css/: main.css
study/study-syllabus/directed/harvard/harvard-cs-classics/static/js/: main.js
study/study-syllabus/directed/harvard/harvard-cs-classics/viewer/web/: viewer.js
study/summer2022/linking-test/: main.cpp
study/summer2022/opengl-book/: CMakeLists.txt  chapter1.c  chapter2.c  main.gcno
study/summer2022/opengl-cpp-template/: README.md
study/summer2022/opengl-glfw/: CMakeLists.txt  glad.c  main.cpp
study/summer2022/opengl-glfw/include/glad/: glad.h
study/summer2022/youtubers/jacob-sorber/write-your-own-libraries-in-c/: Makefile  librarytest
very-good-ressources/: MDN  REGEX.md
(+1 files in other folders)
